fix: refatorando codigo